# rotquant

./: .gitignore  README.md  pyproject.toml  requirements.txt
baselines/: run_baseline.py
configs/: _base.yaml  e1_rotation.yaml  e2_codebook.yaml  e3_qjl.yaml  e3b_turboquant_bias.yaml  e4_scale_group.yaml  e4b_turboquant_vs_rms.yaml  e5_gptq.yaml  e6_2bit_vector.yaml  e7_consistency.yaml  e8_footprint.yaml
eval/: layer_mse.py  perplexity.py  zeroshot.py
rotquant/: __init__.py  calibrate.py  codebooks.py  linear.py  pack.py  patch.py  quantize.py  rotate.py  utils.py
scripts/: aggregate.py  run_experiment.py
tests/: test_calibrate_vector.py  test_gptq_identity.py  test_integration.py  test_pack.py  test_rotation_invariance.py  test_source_coding.py  test_turboquant.py
